--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ branches:
 notifications:
   email: false
 node_js:
-  - 7.10.0
+  - "iojs"
+  - "8"
 before_install:
   - npm i -g npm@^5.4.2
 before_script:
