--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "commit": "git-cz",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "report-coverage": "cat ./coverage/lcov.info | codecov",
+    "report-coverage": "nyc report --reporter=lcov > coverage.lcov && codecov",
     "start": "npm run test",
     "watch:test": "npm t -- --watch",
     "test": "mocha src/__tests__/index.test.js --compilers js:babel-register",
