--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   },
   "scripts": {
     "commit": "git-cz",
-    "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "check-coverage": "nyc check-coverage --statements 90 --branches 90 --functions 90 --lines 90",
     "report-coverage": "nyc report --reporter=lcov > coverage.lcov && codecov",
     "start": "npm run test",
     "watch:test": "npm t -- --watch",
     "test": "mocha src/__tests__/index.test.js --compilers js:babel-register",
     "cover": "nyc npm t",
+    "cover:lcov": "nyc npm t --reporter=lcov",
     "prebuild": "rimraf dist",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
