chore(travis): run travis for other branches than master

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "README.md"
   ],
   "main": "dist/index.js",
+  "release": {
+    "branch": "master"
+  },
   "keywords": [
     "redux",
     "memoized",
